--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 </div>
                 <div class="nav-menu">
                   <ul class="nav-menu-list">
-                    <li><a href="#">Виды масел</a></li>
-                    <li><a href="#">Как работаем</a></li>
-                    <li><a href="#">Прайс-лист</a></li>
-                    <li><a href="#">Частые вопросы</a></li>
+                    <li><a id="oil" href="#">Виды масел</a></li>
+                    <li><a id="work" href="#">Как работаем</a></li>
+                    <li><a id="price" href="#">Прайс-лист</a></li>
+                    <li><a id="faq" href="#">Частые вопросы</a></li>
                   </ul>
                 </div>
                 <div class="nav-contacts">
@@ -419,7 +419,7 @@
         <section class="work">
           <div class="container">
             <div class="section-title">
-              Стандарты качества
+              Как мы работаем
             </div>
             <div class="work-body">
               <div class="work-image">
