--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   Специальные условия снабженцам, СТО, розничным магазинам, организациям с автопарком.
                 </div>
                 <div class="main-cta btn">
-                  <a href="#">
+                  <a id="quiz" href="#">
                     Подробнее
                     <img src="./img/icons/arrow-down-right.svg" alt="">
                   </a>
@@ -133,7 +133,7 @@
                     Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
                   </div>
                   <div class="back-link btn">
-                    <a href="#">
+                    <a href="#" class="open-form-popup">
                       Подробнее
                       <img src="./img/icons/arrow-down-right-black.svg" alt="">
                     </a>
@@ -157,7 +157,7 @@
                     Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
                   </div>
                   <div class="back-link btn">
-                    <a href="#">
+                    <a href="#" class="open-form-popup">
                       Подробнее
                       <img src="./img/icons/arrow-down-right-black.svg" alt="">
                     </a>
@@ -181,7 +181,7 @@
                     Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
                   </div>
                   <div class="back-link btn">
-                    <a href="#">
+                    <a href="#" class="open-form-popup">
                       Подробнее
                       <img src="./img/icons/arrow-down-right-black.svg" alt="">
                     </a>
@@ -205,7 +205,7 @@
                     Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
                   </div>
                   <div class="back-link btn">
-                    <a href="#">
+                    <a href="#" class="open-form-popup">
                       Подробнее
                       <img src="./img/icons/arrow-down-right-black.svg" alt="">
                     </a>
@@ -229,7 +229,7 @@
                     Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
                   </div>
                   <div class="back-link btn">
-                    <a href="#">
+                    <a href="#" class="open-form-popup">
                       Подробнее
                       <img src="./img/icons/arrow-down-right-black.svg" alt="">
                     </a>
@@ -253,7 +253,7 @@
                     Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Разнообразный и богатый опыт укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. 
                   </div>
                   <div class="back-link btn">
-                    <a href="#">
+                    <a href="#" class="open-form-popup">
                       Подробнее
                       <img src="./img/icons/arrow-down-right-black.svg" alt="">
                     </a>
@@ -270,7 +270,7 @@
             </div>
             <div class="standards-body">
               <div class="standards-buttons">
-                <div class="standard-button sae-button">
+                <div class="standard-button sae-button active">
                   SAE <span>International</span>
                 </div>
                 <div class="standard-button ilsac-button">
@@ -289,7 +289,7 @@
               <div class="standards-logo-description">
                 <div class="standards-logo">
                   <div class="standard-wrapper">
-                    <div class="standard-logo sae-img">
+                    <div class="standard-logo sae-img active">
                       <img src="./img/oil-standards/SAE.png" alt="img">
                     </div>
                     <div class="standard-logo ilsac-img">
@@ -310,7 +310,7 @@
                   </div>
                 </div>
                 <div class="standards-descriptions">
-                  <div class="standard-description sae-description">
+                  <div class="standard-description sae-description active">
                     <div class="description-title">
                       Society of Automotive Engineers
                     </div>
@@ -369,9 +369,7 @@
                   <div class="quality-cover-text" href="./img/quality/certificate.png">
                     Повышение квалификации №2345
                   </div>
-                  <div class="quality-cover-icon">
-                    <img src="./img/icons/zoom.png" alt="ico">
-                  </div>
+                    <img class="quality-cover-icon" src="./img/icons/zoom.png" alt="ico">
                 </div>
               </div>
               <div class="quality-item">
@@ -382,9 +380,7 @@
                   <div class="quality-cover-text" href="./img/quality/certificate.png">
                     Повышение квалификации №2345
                   </div>
-                  <div class="quality-cover-icon">
-                    <img src="./img/icons/zoom.png" alt="ico">
-                  </div>
+                    <img class="quality-cover-icon" src="./img/icons/zoom.png" alt="ico">
                 </div>
               </div>
               <div class="quality-item">
@@ -395,9 +391,7 @@
                   <div class="quality-cover-text" href="./img/quality/certificate.png">
                     Повышение квалификации №2345
                   </div>
-                  <div class="quality-cover-icon">
-                    <img src="./img/icons/zoom.png" alt="ico">
-                  </div>
+                    <img class="quality-cover-icon" src="./img/icons/zoom.png" alt="ico">
                 </div>
               </div>
               <div class="quality-item">
@@ -408,9 +402,7 @@
                   <div class="quality-cover-text" href="./img/quality/certificate.png">
                     Повышение квалификации №2345
                   </div>
-                  <div class="quality-cover-icon">
-                    <img src="./img/icons/zoom.png" alt="ico">
-                  </div>
+                    <img class="quality-cover-icon" src="./img/icons/zoom.png" alt="ico">
                 </div>
               </div>
             </div>
@@ -616,15 +608,15 @@
                       </div>
                     </div>
                   </div>
-                  <div class="quiz-choose">
-                    Напишите название вашего города
+                  <div class="quiz-choose q3-choose">
+                    Напишите название вашего города и почтовый индекс
                   </div>
                   <div class="quiz-inputs q3-quiz-inputs">
                     <div class="text-input">
-                      <input type="text" placeholder="Город">
+                      <input id="q3-city" type="text" placeholder="Город">
                     </div>
                     <div class="text-input">
-                      <input type="text" placeholder="Почтовый индекс">
+                      <input id="q3-index" type="text" placeholder="Почтовый индекс">
                     </div>
                   </div>
                 </div>
@@ -716,18 +708,18 @@
                       </div>
                     </div>
                   </div>
-                  <div class="quiz-choose">
+                  <div class="quiz-choose q5-choose">
                     Заполните данные и наши менеджеры свяжутся с Вами, чтобы помочь Вам решить вашу проблему
                   </div>
                   <div class="quiz-inputs q5-quiz-inputs">
                     <div class="text-input">
-                      <input type="text" placeholder="Полное имя">
+                      <input id="q5-name" type="text" placeholder="Полное имя">
                     </div>
                     <div class="text-input">
-                      <input type="email" placeholder="E-mail">
+                      <input id="q5-email" type="email" placeholder="E-mail">
                     </div>
                     <div class="text-input">
-                      <input type="tel" placeholder="Телефон">
+                      <input id="q5-tel" type="tel" placeholder="Телефон">
                     </div>
                   </div>
                 </div>
@@ -936,7 +928,7 @@
               Спасибо, мы получили от Вас заявку. Скоро с вами свяжемся.
             </div>
             <div class="popup-cta btn">
-              <a href="#">
+              <a href="#" class="close-popup-icon">
                 На главную
                 <img src="./img/icons/arrow-down-right.svg" alt="">
               </a>
