--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="back-link btn">
                     <a href="#" class="open-form-popup" id="fox-steel-10w-40">
                       Подробнее
-                      <img src="./img/icons/arrow-down-right-black.svg" alt="">
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-10w-40">
                     </a>
                   </div>
                 </div>
@@ -159,7 +159,7 @@
                   <div class="back-link btn">
                     <a href="#" class="open-form-popup" id="fox-steel-20w-50">
                       Подробнее
-                      <img src="./img/icons/arrow-down-right-black.svg" alt="">
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-20w-50">
                     </a>
                   </div>
                 </div>
@@ -183,7 +183,7 @@
                   <div class="back-link btn">
                     <a href="#" class="open-form-popup" id="fox-steel-30w-60">
                       Подробнее
-                      <img src="./img/icons/arrow-down-right-black.svg" alt="">
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-30w-60">
                     </a>
                   </div>
                 </div>
@@ -207,7 +207,7 @@
                   <div class="back-link btn">
                     <a href="#" class="open-form-popup" id="fox-steel-40w-70">
                       Подробнее
-                      <img src="./img/icons/arrow-down-right-black.svg" alt="">
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-40w-70">
                     </a>
                   </div>
                 </div>
@@ -231,7 +231,7 @@
                   <div class="back-link btn">
                     <a href="#" class="open-form-popup" id="fox-steel-50w-80">
                       Подробнее
-                      <img src="./img/icons/arrow-down-right-black.svg" alt="">
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-50w-80">
                     </a>
                   </div>
                 </div>
@@ -255,7 +255,7 @@
                   <div class="back-link btn">
                     <a href="#" class="open-form-popup" id="fox-steel-60w-90">
                       Подробнее
-                      <img src="./img/icons/arrow-down-right-black.svg" alt="">
+                      <img src="./img/icons/arrow-down-right-black.svg" alt="" id="fox-steel-60w-90">
                     </a>
                   </div>
                 </div>
@@ -724,7 +724,6 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
         </section>
@@ -822,7 +821,7 @@
                 <div class="feedback-subtitle">
                   Заполните данные и наши менеджеры свяжутся с Вами, чтобы помочь Вам решить вашу проблему
                 </div>
-                <form action="sender.php" method="post" class="form">
+                <form action="main-sender.php" method="post" class="form">
                   <div class="text-input">
                     <input type="text" class="form-name" name="name" placeholder="Полное имя*" required>
                   </div>
