--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                   </div>
                   <div class="radio-button q5-radio-button">
                     <input type="radio" class="variance personal-data" name="personal-data-popup" id="personal-data-popup" value="yes" required>
-                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте</label>
+                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте*</label>
                   </div>
                 </div>
               </div>
@@ -840,7 +840,7 @@
                   </div>
                   <div class="radio-button">
                     <input type="radio" class="variance personal-data" name="personal-data-footer" id="personal-data-footer" value="yes" required>
-                    <label for="personal-data-footer">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте</label>
+                    <label for="personal-data-footer">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте*</label>
                   </div>
                   <button type="button" class="send-form form-cta btn">
                     Отправить
@@ -914,7 +914,7 @@
                   </div>
                   <div class="radio-button">
                     <input type="radio" class="variance personal-data" name="personal-data-popup" id="personal-data-popup" value="yes" required>
-                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте</label>
+                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте*</label>
                   </div>
                   <button type="button" class="send-form form-cta btn">
                     Отправить
