values for inputs

--- a/index.html
+++ b/index.html
@@ -558,23 +558,23 @@
                   </div>
                   <div class="radio-buttons">
                     <div class="radio-button">
-                      <input checked type="radio" class="variance q2-variance" name="q2" id="q2_1">
+                      <input checked type="radio" class="variance q2-variance" name="q2" id="q2_1" value="q2_1">
                       <label for="q2_1">50</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q2-variance" name="q2" id="q2_2">
+                      <input type="radio" class="variance q2-variance" name="q2" id="q2_2" value="q2_2">
                       <label for="q2_2">100</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q2-variance" name="q2" id="q2_3">
+                      <input type="radio" class="variance q2-variance" name="q2" id="q2_3" value="q2_3">
                       <label for="q2_3">200</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q2-variance" name="q2" id="q2_4">
+                      <input type="radio" class="variance q2-variance" name="q2" id="q2_4" value="q2_4">
                       <label for="q2_4">300</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q2-variance" name="q2" id="q2_5">
+                      <input type="radio" class="variance q2-variance" name="q2" id="q2_5" value="q2_5">
                       <label for="q2_5">Более</label>
                     </div>
                   </div>
@@ -654,27 +654,27 @@
                   </div>
                   <div class="radio-buttons">
                     <div class="radio-button">
-                      <input checked type="radio" class="variance q4-variance" name="q4" id="q4_1">
+                      <input checked type="radio" class="variance q4-variance" name="q4" id="q4_1" value="q4_1">
                       <label for="q4_1">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_2">
+                      <input type="radio" class="variance q4-variance" name="q4" id="q4_2" value="q4_2">
                       <label for="q4_2">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_3">
+                      <input type="radio" class="variance q4-variance" name="q4" id="q4_3" value="q4_3">
                       <label for="q4_3">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_4">
+                      <input type="radio" class="variance q4-variance" name="q4" id="q4_4" value="q4_4">
                       <label for="q4_4">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_5">
+                      <input type="radio" class="variance q4-variance" name="q4" id="q4_5" value="q4_5">
                       <label for="q4_5">Имя бренда</label>
                     </div>
                     <div class="radio-button">
-                      <input type="radio" class="variance q4-variance" name="q4" id="q4_6">
+                      <input type="radio" class="variance q4-variance" name="q4" id="q4_6" value="q4_6">
                       <label for="q4_6">Имя бренда</label>
                     </div>
                   </div>
