--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </header>
           <div class="bg">
             <div class="bg-image">
-              <img src="./img/start-page/bg.png" alt="bg-image">
+              <img src="./img/start-page/bg.jpg" alt="bg-image">
               <!-- <div class="bg-cover"></div> -->
             </div>
           </div>
@@ -102,7 +102,7 @@
         <section class="catalogue">
           <div class="bg">
             <div class="bg-image">
-              <img src="./img/catalogue/bg.png" alt="bg-image">
+              <img src="./img/catalogue/bg.jpg" alt="bg-image">
               <div class="bg-cover"></div>
             </div>
           </div>
