--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                   </div>
                   <div class="radio-button q5-radio-button">
                     <input type="radio" class="variance personal-data" name="personal-data-popup" id="personal-data-popup" value="yes" required>
-                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте*</label>
+                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с <span class="open-personal">хранением и обработкой данных</span> на данном сайте*</label>
                   </div>
                 </div>
               </form>
@@ -936,7 +936,7 @@
                   </div>
                   <div class="radio-button">
                     <input type="radio" class="variance personal-data" name="personal-data-footer" id="personal-data-footer" value="yes" required>
-                    <label for="personal-data-footer">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте*</label>
+                    <label for="personal-data-footer">Используя эту форму, вы соглашаетесь с <span class="open-personal">хранением и обработкой данных</span> на данном сайте*</label>
                   </div>
                   <button type="button" class="send-form form-cta btn">
                     Отправить
@@ -1010,7 +1010,7 @@
                   </div>
                   <div class="radio-button">
                     <input type="radio" class="variance personal-data" name="personal-data-popup" id="personal-data-popup" value="yes" required>
-                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с хранением и обработкой данных на данном сайте*</label>
+                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с <span class="open-personal">хранением и обработкой данных</span> на данном сайте*</label>
                   </div>
                   <button type="button" class="send-form form-cta btn">
                     Отправить
