--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="bg">
             <div class="bg-image">
               <img src="./img/start-page/bg.jpg" alt="bg-image">
-              <!-- <div class="bg-cover"></div> -->
+              <div class="bg-cover"></div>
             </div>
           </div>
           <div class="container">
@@ -819,8 +819,8 @@
                     </div>
                   </div>
                   <div class="radio-button q5-radio-button">
-                    <input type="radio" class="variance personal-data" name="personal-data-popup" id="personal-data-popup" value="yes" required>
-                    <label for="personal-data-popup">Используя эту форму, вы соглашаетесь с <span class="open-personal">хранением и обработкой данных</span> на данном сайте*</label>
+                    <input type="radio" class="variance personal-data" name="personal-data-quiz" id="personal-data-quiz" value="yes" required>
+                    <label for="personal-data-quiz">Используя эту форму, вы соглашаетесь с <span class="open-personal">хранением и обработкой данных</span> на данном сайте*</label>
                   </div>
                 </div>
               </form>
